--- a/mycss.css
+++ b/mycss.css
@@ -4,7 +4,7 @@
 h1 {
 
     text-align: center;
-    font-family: fantasy;
+    font-family: verdana;
     font-size: 80px;
     background: #B0C4DE;
     margin: 0;
@@ -24,11 +24,13 @@ body{
     margin: 0;
     padding: 0;
     bottom: 0;
-    background: #ebf3ff;
+    /* background: #ebf3ff; */
 }
 
 select {
-    width:100%;
+    position: absolute;
+    width:50%;
+    left: 25%;
     text-align: center;
     margin: 0, 40px, 0, 40px;
 }
@@ -43,7 +45,7 @@ select {
     margin: 8px;
     padding: 10px;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 30px; 
     box-shadow: 5px 5px 5px black;
     background: white;
     
@@ -57,7 +59,10 @@ select {
 }
 
 #chordContainer > div > span {
-    max-width: 100%;
-    font-size: 2vw;
+    max-width: 80%;
+    font-size: 1.5vw;
+    text-align: center;
+    white-space: nowrap;
+    padding: 10px;
 }
 
